samples/_failures_safe/1761327331_c9c980_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00e3fa66.c: In function ‘main’:
./samples/SAFE/__tmp_00e3fa66.c:161:5: error: expected declaration or statement at end of input
  161 |     printf("------------------------------------------------\n");
      |     ^~~~~~
